Add ZGC Garbage Collector